# REPS

./: .gitignore  README.md  exercise-list.txt  folder-structure.txt  pyproject.toml
.github/workflows/: ci.yml
src/reps/: config.py
src/reps/cli/: main.py
src/reps/domain/: exercise_map.yaml  models.py
src/reps/io/: parquet.py
src/reps/pipeline/: ingest.py  validate.py
src/reps/processing/: resample.py
tests/: conftest.py
tests/cli/: test_cli_smoke.py
tests/io/: test_parquet.py
tests/pipeline/: test_ingest.py  test_validate_rules.py
tests/processing/: test_resample.py
